--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>onaug6th</title>
+    <meta name="keywords" content="onaug6th,前端工程师,nodeJS">
+    <meta name="description" content="像我这样的人">
   </head>
   <body>
     <div id="app"></div>
