--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>onaug6th</title>
-    <meta name="keywords" content="onaug6th,前端工程师,nodeJS">
+    <meta name="keywords" content="onaug6th, 前端工程师, frontEnd">
     <meta name="description" content="像我这样的人">
   </head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <body>
     <noscript>
       <strong>We're sorry but onaug6th doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
