--- a/public/index.html
+++ b/public/index.html
@@ -17,4 +17,15 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+    console.log(
+      `%c你好，开发者 💻`,
+      "background:#fff ; color : #014983;font-size : 13px; padding: 1px; border-radius: 0 3px 3px 0;"
+      );
+
+    console.log(
+      `%c很高兴在这里看到你，have a nice day`,
+      "background:#fff ; color : #014983;font-size : 13px; padding: 1px; border-radius: 0 3px 3px 0;"
+      );
+  </script>
 </html>
